creacion de pagina contacto y mofdificacion de Index

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -84,6 +84,11 @@ header .textos_header{
     justify-content:right;
     
 }
+.contenedor-contacto {
+    display: flex;
+    justify-content:center;
+    
+}
 
 .imagen-inicio{
     width: 50%;
