--- a/css/estilos.css
+++ b/css/estilos.css
@@ -207,7 +207,7 @@ footer {
     font: size 16px;
 }
 
-.login_inbox input[type="submit"]{
+.login_inbox input[type="button"]{
     border: none;
     outline: none;
     height: 40px;
