--- a/css/estilos.css
+++ b/css/estilos.css
@@ -15,6 +15,11 @@ body {
     overflow: hidden;
 }
 
+.textos_header > .logo{
+    color: rgb(0, 49, 6);
+    font-family: 'Franklin Gothic Heavy';
+}
+
 .titulo {
     color: #01320e;
     font-size: 30px;
@@ -82,6 +87,11 @@ header .textos_header{
 .contenedor-inicio {
     display: flex;
     justify-content:right;
+    
+}
+.contenedor-contacto {
+    display: flex;
+    justify-content:center;
     
 }
 
@@ -202,7 +212,7 @@ footer {
     font: size 16px;
 }
 
-.login_inbox input[type="submit"]{
+.login_inbox input[type="button"]{
     border: none;
     outline: none;
     height: 40px;
