--- a/css/estilos.css
+++ b/css/estilos.css
@@ -105,6 +105,7 @@ header .textos_header{
     font-weight: 300;
     font-size: 18px;
     text-align: justify;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 footer {
