--- a/css/styles.css
+++ b/css/styles.css
@@ -72,13 +72,29 @@ li a:hover:not(.active) {
 /*---------------------*/
 /* ESPACIO DEL FORMULARIO */
 
-form {
+form, .formato-parrafo {
     width: 30%;
 	margin: 20px;
     margin-left: 350px;
     float: left;
     background-color: #F8F8FF;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+.botones > input{
+    font-weight: bold;
+    cursor: pointer;
+    padding: 5px;
+    margin: 0 10px 10px 0;
+    border: 1px solid #ccc;
+    background: #eee;
+    border-radius: 8px 8px 8px 8px;
+}
+
+.botones > input:hover{
+    background: #ddd;
+}
+
 
 h1{
     text-align: center;
