--- a/css/styles.css
+++ b/css/styles.css
@@ -49,10 +49,12 @@ ul {
     margin: 0;
     padding: 0;
     width: 200px;
-    background-color: #E6E6FA;
+    background-color: #E6E6FA;    
 }
 
 li a {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
     display: block;
     color: #000;
     padding: 8px 0 8px 16px;
@@ -77,7 +79,7 @@ form, .formato-parrafo {
 	margin: 20px;
     margin-left: 350px;
     float: left;
-    background-color: #F8F8FF;
+    background-color: #E6E6FA;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -87,7 +89,7 @@ form, .formato-parrafo {
     padding: 5px;
     margin: 0 10px 10px 0;
     border: 1px solid #ccc;
-    background: #eee;
+    background: rgb(250,250,250);
     border-radius: 8px 8px 8px 8px;
 }
 
